@@ -5,10 +5,7 @@ import lombok.RequiredArgsConstructor;
 import org.example.planlist.dto.SharePlannerDTO.request.SelectTimeRequestDTO;
 import org.example.planlist.dto.PtDTO.response.FreeTimeIntervalDTO;
 import org.example.planlist.dto.SharePlannerDTO.response.SharedPlannerResponseDTO;
-import org.example.planlist.entity.FreeTimeCalendar;
-import org.example.planlist.entity.PlannerSession;
-import org.example.planlist.entity.ProjectParticipant;
-import org.example.planlist.entity.PtSession;
+import org.example.planlist.entity.*;
 import org.example.planlist.repository.*;
 import org.example.planlist.util.Interval;
 import org.springframework.stereotype.Service;
@@ -18,6 +15,7 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -25,56 +23,77 @@ public class SharePlannerService {
 
     private final ProjectParticipantRepository projectParticipantRepository;
     private final FreeTimeCalendarRepository freeTimeCalendarRepository;
-    private final PtSessionRepository ptSessionRepository;
-    private final PlannerSessionRepository plannerSessionRepository;
     private final PlannerProjectRepository plannerProjectRepository;
+    private final PlannerSessionRepository plannerSessionRepository;
+    private final PtSessionRepository ptSessionRepository;
 
+    // ------------------------
+    // 기존 PT 전용 메서드
+    // ------------------------
     public SharedPlannerResponseDTO getSharedPlanner(Long plannerId) {
-
         Long projectId = plannerSessionRepository.findById(plannerId)
                 .orElseThrow(() -> new EntityNotFoundException("세션을 찾을 수 없습니다."))
                 .getProject()
                 .getProjectId();
 
         PtSession ptSession = ptSessionRepository.findById(plannerId).orElseThrow();
-
         LocalDate startDate = ptSession.getStartWeekDay();
         LocalDate endDate = ptSession.getEndWeekDay();
 
-        // 1. ACCEPTED 참여자 조회
         List<ProjectParticipant> participants = projectParticipantRepository.findByProject_ProjectIdAndResponse(
                 projectId, ProjectParticipant.Response.ACCEPTED);
-        List<Long> userIds = participants.stream()
-                .map(p -> p.getUser().getId())
-                .collect(Collectors.toList());
+        List<Long> userIds = participants.stream().map(p -> p.getUser().getId()).toList();
 
         if (userIds.isEmpty()) {
-            return new SharedPlannerResponseDTO(
-                    startDate + " ~ " + endDate,
-                    Collections.emptyList()
-//                    Collections.emptyList()
-            );
+            return new SharedPlannerResponseDTO(startDate + " ~ " + endDate, Collections.emptyList());
         }
 
-        // 2. 참여자 프리캘린더 조회
         List<FreeTimeCalendar> freeTimes = freeTimeCalendarRepository.findByUserIdInAndAvailableDateBetween(
                 userIds, startDate, endDate);
 
-        // 3. 날짜별로 그룹핑
+        return calculatePTIntervals(startDate, endDate, userIds, freeTimes);
+    }
+
+    @Transactional
+    public PlannerSession updateSelectTime(Long plannerId, SelectTimeRequestDTO dto) {
+        PtSession session = ptSessionRepository.findById(plannerId)
+                .orElseThrow(() -> new IllegalArgumentException("Invalid plannerId: " + plannerId));
+
+        LocalDate date = LocalDate.parse(dto.getDate());
+        LocalTime startTime = null;
+        LocalTime endTime = null;
+
+        if (Boolean.TRUE.equals(dto.getAllDay())) {
+            startTime = LocalTime.of(0, 0);
+            endTime = LocalTime.of(23, 59);
+        } else {
+            if (dto.getStart() != null) startTime = LocalTime.parse(dto.getStart());
+            if (dto.getEnd() != null) endTime = LocalTime.parse(dto.getEnd());
+        }
+
+        session.setDate(date);
+        session.setStartTime(startTime);
+        session.setEndTime(endTime);
+        session.setIsFinalized(true);
+
+        return ptSessionRepository.save(session);
+    }
+
+    // PT 교집합 계산 내부 메서드
+    private SharedPlannerResponseDTO calculatePTIntervals(LocalDate startDate, LocalDate endDate,
+                                                          List<Long> userIds, List<FreeTimeCalendar> freeTimes) {
         Map<LocalDate, List<FreeTimeCalendar>> freeTimesByDate = freeTimes.stream()
                 .collect(Collectors.groupingBy(FreeTimeCalendar::getAvailableDate));
 
         List<FreeTimeIntervalDTO> allList = new ArrayList<>();
-//        List<FreeTimeIntervalDTO> notOneList = new ArrayList<>();
 
         for (LocalDate date = startDate; !date.isAfter(endDate); date = date.plusDays(1)) {
             List<FreeTimeCalendar> dayFreeTimes = freeTimesByDate.getOrDefault(date, Collections.emptyList());
 
-            // userId -> List<Interval>
             Map<Long, List<Interval>> userIntervals = new HashMap<>();
             for (FreeTimeCalendar ft : dayFreeTimes) {
                 Interval interval;
-                if (Boolean.TRUE.equals(ft.getAll_day())) {
+                if (Boolean.TRUE.equals(ft.getAllDay())) {
                     interval = new Interval(LocalTime.MIN, LocalTime.MAX);
                 } else {
                     interval = new Interval(
@@ -86,35 +105,20 @@ public class SharePlannerService {
             }
 
             int totalParticipants = userIds.size();
-
-            // 모두 겹치는 구간
             List<Interval> allOverlap = intersectAll(userIntervals, totalParticipants);
-
-            // 한명 뺀 나머지 겹치는 구간
-//            List<Interval> notOneOverlap = intersectNotOne(userIntervals);
-//
             allList.addAll(intervalsToDTO(date, allOverlap));
-//            notOneList.addAll(intervalsToDTO(date, notOneOverlap));
         }
 
-        return new SharedPlannerResponseDTO(
-                startDate + " ~ " + endDate,
-                allList
-//                notOneList
-        );
+        return new SharedPlannerResponseDTO(startDate + " ~ " + endDate, allList);
     }
 
-    // 모든 참여자의 interval 리스트 교집합 계산
     private List<Interval> intersectAll(Map<Long, List<Interval>> userIntervals, int totalParticipants) {
         if (userIntervals.size() < totalParticipants) {
-            // 여유시간 없는 참여자 존재 → 교집합 없음
             return Collections.emptyList();
         }
 
-        // 시작값으로 첫 참여자 interval 복사
         List<Interval> intersected = new ArrayList<>(userIntervals.values().iterator().next());
 
-        // 모든 참여자의 interval 교집합 계산
         for (List<Interval> intervals : userIntervals.values()) {
             intersected = intersectIntervalLists(intersected, intervals);
             if (intersected.isEmpty()) break;
@@ -122,33 +126,6 @@ public class SharePlannerService {
         return intersected;
     }
 
-    // n명 중 한 명 제외 후 나머지 모두의 교집합 (각 멤버 제외하고 교집합 구해서 모두 합침)
-    private List<Interval> intersectNotOne(Map<Long, List<Interval>> userIntervals) {
-        List<Interval> result = new ArrayList<>();
-        List<Long> users = new ArrayList<>(userIntervals.keySet());
-
-        for (int i = 0; i < users.size(); i++) {
-            Long excludedUser = users.get(i);
-
-            // 제외한 나머지 참여자들의 intervals만 추림
-            Map<Long, List<Interval>> subMap = new HashMap<>(userIntervals);
-            subMap.remove(excludedUser);
-
-            if (subMap.isEmpty()) continue;
-
-            // 교집합 계산
-            List<Interval> intersected = new ArrayList<>(subMap.values().iterator().next());
-            for (List<Interval> intervals : subMap.values()) {
-                intersected = intersectIntervalLists(intersected, intervals);
-                if (intersected.isEmpty()) break;
-            }
-            result = unionIntervals(result, intersected);
-        }
-
-        return result;
-    }
-
-    // 두 interval 리스트의 교집합 계산
     private List<Interval> intersectIntervalLists(List<Interval> list1, List<Interval> list2) {
         List<Interval> result = new ArrayList<>();
         int i = 0, j = 0;
@@ -174,37 +151,11 @@ public class SharePlannerService {
         return result;
     }
 
-    // 두 interval 리스트의 합집합 계산 (중첩 구간 합침)
-    private List<Interval> unionIntervals(List<Interval> list1, List<Interval> list2) {
-        List<Interval> combined = new ArrayList<>();
-        combined.addAll(list1);
-        combined.addAll(list2);
-        if (combined.isEmpty()) return combined;
-
-        combined.sort(Comparator.comparing(Interval::getStart));
-        List<Interval> merged = new ArrayList<>();
-        Interval prev = combined.get(0);
-
-        for (int i = 1; i < combined.size(); i++) {
-            Interval curr = combined.get(i);
-            if (!prev.getEnd().isBefore(curr.getStart())) {
-                // 겹치는 구간 병합
-                prev = new Interval(prev.getStart(), prev.getEnd().isAfter(curr.getEnd()) ? prev.getEnd() : curr.getEnd());
-            } else {
-                merged.add(prev);
-                prev = curr;
-            }
-        }
-        merged.add(prev);
-        return merged;
-    }
-
     private List<FreeTimeIntervalDTO> intervalsToDTO(LocalDate date, List<Interval> intervals) {
         if (intervals.isEmpty()) return Collections.emptyList();
 
         List<FreeTimeIntervalDTO> dtos = new ArrayList<>();
         for (Interval interval : intervals) {
-            // 00:00 ~ 23:59:59 인 경우 allDay 처리
             if (interval.getStart().equals(LocalTime.MIN) && interval.getEnd().equals(LocalTime.MAX)) {
                 dtos.add(FreeTimeIntervalDTO.ofAllDay(date));
             } else {
@@ -214,37 +165,61 @@ public class SharePlannerService {
         return dtos;
     }
 
-    @Transactional
-    public PlannerSession updateSelectTime(Long plannerId, SelectTimeRequestDTO dto) {
-        // 기존 세션 찾기
-        PtSession session = ptSessionRepository.findById(plannerId)
-                .orElseThrow(() -> new IllegalArgumentException("Invalid plannerId: " + plannerId));
+    // ------------------------
+    // 여행 프로젝트 전용 메서드
+    // ------------------------
+    @Transactional(readOnly = true)
+    public SharedPlannerResponseDTO getTravelSharedCalendar(Long projectId, LocalDate startDate, LocalDate endDate) {
+        List<ProjectParticipant> participants = projectParticipantRepository
+                .findByProject_ProjectIdAndResponse(projectId, ProjectParticipant.Response.ACCEPTED);
+        List<Long> userIds = participants.stream()
+                .map(p -> p.getUser().getId())
+                .toList();
 
-        // 날짜 파싱
-        LocalDate date = LocalDate.parse(dto.getDate());
-        LocalTime startTime = null;
-        LocalTime endTime = null;
-
-        // allDay 여부에 따라 시간 설정
-        if (dto.getAllDay() != null && dto.getAllDay()) {
-            startTime = LocalTime.of(0, 0);
-            endTime = LocalTime.of(23, 59);
-        } else {
-            if (dto.getStart() != null) {
-                startTime = LocalTime.parse(dto.getStart());
-            }
-            if (dto.getEnd() != null) {
-                endTime = LocalTime.parse(dto.getEnd());
-            }
+        if (userIds.isEmpty()) {
+            return new SharedPlannerResponseDTO(
+                    startDate + " ~ " + endDate,
+                    Collections.emptyList()
+            );
         }
 
-        // 값 업데이트
-        session.setDate(date);
-        session.setStartTime(startTime);
-        session.setEndTime(endTime);
-        session.setIsFinalized(true);
+        List<FreeTimeCalendar> allDayFreeTimes = freeTimeCalendarRepository
+                .findByUserIdInAndAllDayTrueAndAvailableDateBetween(userIds, startDate, endDate);
 
-        // 저장
-        return ptSessionRepository.save(session);
+        Map<LocalDate, Long> dateCountMap = allDayFreeTimes.stream()
+                .collect(Collectors.groupingBy(FreeTimeCalendar::getAvailableDate, Collectors.counting()));
+
+        List<FreeTimeIntervalDTO> allDayCommonList = dateCountMap.entrySet().stream()
+                .filter(e -> e.getValue() == userIds.size())
+                .map(e -> FreeTimeIntervalDTO.ofAllDay(e.getKey()))
+                .sorted(Comparator.comparing(FreeTimeIntervalDTO::getDate))
+                .toList();
+
+        return new SharedPlannerResponseDTO(startDate + " ~ " + endDate, allDayCommonList);
+    }
+
+    @Transactional
+    public void confirmTravelDate(Long projectId, LocalDate date) {
+        PlannerProject project = plannerProjectRepository.findById(projectId)
+                .orElseThrow(() -> new RuntimeException("프로젝트를 찾을 수 없습니다."));
+
+        project.setStartDate(date);
+        project.setEndDate(date);
+        project.setStatus(PlannerProject.Status.INPROGRESS);
+
+        plannerProjectRepository.save(project);
+    }
+
+    // 여행 날짜 확정
+    @Transactional
+    public void confirmTravelDateRange(Long projectId, LocalDate startDate, LocalDate endDate) {
+        PlannerProject project = plannerProjectRepository.findById(projectId)
+                .orElseThrow(() -> new RuntimeException("프로젝트를 찾을 수 없습니다."));
+
+        project.setStartDate(startDate);
+        project.setEndDate(endDate);
+        project.setStatus(PlannerProject.Status.INPROGRESS);
+
+        plannerProjectRepository.save(project);
     }
 }
